--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 	<script src="common/js/leaflet-src-0.7.3.js"></script>
 	<script src='common/js/leaflet-omnivore-0.2.0.js'></script>
-	<script src="omnivore-demo.js"></script>
-	<script src="rede-convergir-db.js"></script>
 
+	<script src="rede-convergir-geojson.js"></script>
+	<script src="omnivore-demo.js"></script>
 
 </body>
 </html>
